syntax = "proto3";
package runner;

option go_package = "types/testdata";

message SimpleMessage {
  string sender = 1;
  string hello = 2;
  string world = 3;
}

message SimpleMessage2 {
  string field = 1;
}
